# cal_calc

./: cli.py  days.json  justfile  pyproject.toml
cal_calc/: __init__.py  models.py
cal_calc/repos/: __init__.py  base.py  json.py
tests/: test_repo.py
